force-app/main/default/objects/Account/fields/KCPC_JobNumberRequired__c.field-meta.xml
<CustomField>
    <fullName>KCPC_JobNumberRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JobNumberRequired</label>
    <type>Checkbox</type>
</CustomField>