force-app/main/default/objects/Account/fields/KCPQ_Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Agency_ID__c</fullName>
    <label>Agency ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>