force-app/main/default/objects/Account/fields/KCPQ_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Agency_Name__c</fullName>
    <label>Agency Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>