force-app/main/default/objects/Account/fields/KCPQ_AllowExceedJobQty__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_AllowExceedJobQty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllowExceedJobQty</label>
    <type>Checkbox</type>
</CustomField>