force-app/main/default/objects/Account/fields/KCPQ_AllowNonJobItem__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_AllowNonJobItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllowNonJobItem</label>
    <type>Checkbox</type>
</CustomField>