force-app/main/default/objects/Account/fields/KCPQ_Alternative1099Name__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Alternative1099Name__c</fullName>
    <label>Alternative1099Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>