force-app/main/default/objects/Account/fields/KCPQ_AlwaysUseJobPrice__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_AlwaysUseJobPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AlwaysUseJobPrice</label>
    <type>Checkbox</type>
</CustomField>