force-app/main/default/objects/Account/fields/KCPQ_BillToContactId__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_BillToContactId__c</fullName>
    <label>BillToContactId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>