force-app/main/default/objects/Account/fields/KCPQ_Channel__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Channel__c</fullName>
    <label>Channel</label>
    <length>30</length>
    <type>Text</type>
</CustomField>