force-app/main/default/objects/Account/fields/KCPQ_Class2id__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Class2id__c</fullName>
    <label>Class2id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>