force-app/main/default/objects/Account/fields/KCPQ_Class3id__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Class3id__c</fullName>
    <label>Class3id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>