force-app/main/default/objects/Account/fields/KCPQ_CodRequiredFlag__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_CodRequiredFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CodRequiredFlag</label>
    <type>Checkbox</type>
</CustomField>