force-app/main/default/objects/Account/fields/KCPQ_CompanyId__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_CompanyId__c</fullName>
    <label>CompanyId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>