force-app/main/default/objects/Account/fields/KCPQ_Corporate_Group__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Corporate_Group__c</fullName>
    <label>Corporate Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>