force-app/main/default/objects/Account/fields/KCPQ_Corporate_ID__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Corporate_ID__c</fullName>
    <label>Corporate ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>