force-app/main/default/objects/Account/fields/KCPQ_Corporate_Name__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Corporate_Name__c</fullName>
    <label>Corporate Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>