force-app/main/default/objects/Account/fields/KCPQ_CorporateCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_CorporateCreditLimit__c</fullName>
    <label>CorporateCreditLimit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>