force-app/main/default/objects/Account/fields/KCPQ_CorporateCreditLimitAvailable__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_CorporateCreditLimitAvailable__c</fullName>
    <label>CorporateCreditLimitAvailable</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>