force-app/main/default/objects/Account/fields/KCPQ_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Credit_Status__c</fullName>
    <label>Credit Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>