force-app/main/default/objects/Account/fields/KCPQ_CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_CreditLimit__c</fullName>
    <label>CreditLimit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>