force-app/main/default/objects/Account/fields/KCPQ_CreditLimitAvailable__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_CreditLimitAvailable__c</fullName>
    <label>CreditLimitAvailable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>