force-app/main/default/objects/Account/fields/KCPQ_CreditLimitCheckAtShipment__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_CreditLimitCheckAtShipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreditLimitCheckAtShipment</label>
    <type>Checkbox</type>
</CustomField>