force-app/main/default/objects/Account/fields/KCPQ_CreditLimitPerOrder__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_CreditLimitPerOrder__c</fullName>
    <label>CreditLimitPerOrder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>