force-app/main/default/objects/Account/fields/KCPQ_CreditLimitUsed__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_CreditLimitUsed__c</fullName>
    <label>CreditLimitUsed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>