force-app/main/default/objects/Account/fields/KCPQ_Customer_Id_P21__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Customer_Id_P21__c</fullName>
    <description>P21 legacy customer Id</description>
    <externalId>true</externalId>
    <inlineHelpText>P21 legacy customer Id</inlineHelpText>
    <label>Customer Id P21</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>