force-app/main/default/objects/Account/fields/KCPQ_DateAcctOpened__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_DateAcctOpened__c</fullName>
    <label>DateAcctOpened</label>
    <type>Date</type>
</CustomField>