force-app/main/default/objects/Account/fields/KCPQ_DaysOverdueForCreditHold__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_DaysOverdueForCreditHold__c</fullName>
    <label>DaysOverdueForCreditHold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>