force-app/main/default/objects/Account/fields/KCPQ_DefaultRebateLocationId__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_DefaultRebateLocationId__c</fullName>
    <label>DefaultRebateLocationId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>