force-app/main/default/objects/Account/fields/KCPQ_Delete__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>