force-app/main/default/objects/Account/fields/KCPQ_Distributor_Net_Flag__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Distributor_Net_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distributor Net Flag</label>
    <type>Checkbox</type>
</CustomField>