force-app/main/default/objects/Account/fields/KCPQ_EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_EmailAddress__c</fullName>
    <label>EmailAddress</label>
    <type>Email</type>
</CustomField>