force-app/main/default/objects/Account/fields/KCPQ_ExcludeCanceldFromPackList__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_ExcludeCanceldFromPackList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExcludeCanceldFromPackList</label>
    <type>Checkbox</type>
</CustomField>