force-app/main/default/objects/Account/fields/KCPQ_ExcludeCanceldFromPickTix__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_ExcludeCanceldFromPickTix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExcludeCanceldFromPickTix</label>
    <type>Checkbox</type>
</CustomField>