force-app/main/default/objects/Account/fields/KCPQ_FcGraceDays__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_FcGraceDays__c</fullName>
    <label>FcGraceDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>