force-app/main/default/objects/Account/fields/KCPQ_FcPercentage__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_FcPercentage__c</fullName>
    <label>FcPercentage</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>