force-app/main/default/objects/Account/fields/KCPQ_FederalExemptionNumber__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_FederalExemptionNumber__c</fullName>
    <label>FederalExemptionNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>