force-app/main/default/objects/Account/fields/KCPQ_FinanceChargeShipToId__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_FinanceChargeShipToId__c</fullName>
    <label>FinanceChargeShipToId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>