force-app/main/default/objects/Account/fields/KCPQ_FreightChargeId__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_FreightChargeId__c</fullName>
    <label>FreightChargeId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>