force-app/main/default/objects/Account/fields/KCPQ_GenerateCustomerStatements__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_GenerateCustomerStatements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GenerateCustomerStatements</label>
    <type>Checkbox</type>
</CustomField>