force-app/main/default/objects/Account/fields/KCPQ_GenerateFinanceCharges__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_GenerateFinanceCharges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GenerateFinanceCharges</label>
    <type>Checkbox</type>
</CustomField>