force-app/main/default/objects/Account/fields/KCPQ_Incorporated__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Incorporated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incorporated</label>
    <type>Checkbox</type>
</CustomField>