force-app/main/default/objects/Account/fields/KCPQ_InterchgReceiverId__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_InterchgReceiverId__c</fullName>
    <label>InterchgReceiverId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>