force-app/main/default/objects/Account/fields/KCPQ_InternationalSAN__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_InternationalSAN__c</fullName>
    <label>InternationalSAN</label>
    <length>64</length>
    <type>Text</type>
</CustomField>