force-app/main/default/objects/Account/fields/KCPQ_InvoiceBatchNumber__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_InvoiceBatchNumber__c</fullName>
    <label>InvoiceBatchNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>