force-app/main/default/objects/Account/fields/KCPQ_InvoicePrintQty__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_InvoicePrintQty__c</fullName>
    <label>InvoicePrintQty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>