force-app/main/default/objects/Account/fields/KCPQ_JobPricing__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_JobPricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JobPricing</label>
    <type>Checkbox</type>
</CustomField>