force-app/main/default/objects/Account/fields/KCPQ_LastFcDate__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_LastFcDate__c</fullName>
    <label>LastFcDate</label>
    <type>Date</type>
</CustomField>