force-app/main/default/objects/Account/fields/KCPQ_LeadSourceId__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_LeadSourceId__c</fullName>
    <label>LeadSourceId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>