force-app/main/default/objects/Account/fields/KCPQ_LegacyId__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_LegacyId__c</fullName>
    <label>LegacyId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>