force-app/main/default/objects/Account/fields/KCPQ_LimitMaxShipmentsPerOrder__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_LimitMaxShipmentsPerOrder__c</fullName>
    <label>LimitMaxShipmentsPerOrder</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>