force-app/main/default/objects/Account/fields/KCPQ_MinimumFinanceCharge__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_MinimumFinanceCharge__c</fullName>
    <label>MinimumFinanceCharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>