force-app/main/default/objects/Account/fields/KCPQ_MinimumOrderDollarAmount__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_MinimumOrderDollarAmount__c</fullName>
    <label>MinimumOrderDollarAmount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>