force-app/main/default/objects/Account/fields/KCPQ_OrderAcknowledgments__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_OrderAcknowledgments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OrderAcknowledgments</label>
    <type>Checkbox</type>
</CustomField>