force-app/main/default/objects/Account/fields/KCPQ_OrderPriorityId__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_OrderPriorityId__c</fullName>
    <label>OrderPriorityId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>