force-app/main/default/objects/Account/fields/KCPQ_OtherExemptionNumber__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_OtherExemptionNumber__c</fullName>
    <label>OtherExemptionNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>