force-app/main/default/objects/Account/fields/KCPQ_OverrideProfitLimit__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_OverrideProfitLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OverrideProfitLimit</label>
    <type>Checkbox</type>
</CustomField>