force-app/main/default/objects/Account/fields/KCPQ_OverrideRevenueByItem__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_OverrideRevenueByItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OverrideRevenueByItem</label>
    <type>Checkbox</type>
</CustomField>