force-app/main/default/objects/Account/fields/KCPQ_OverTolerancePercentage__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_OverTolerancePercentage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OverTolerancePercentage</label>
    <type>Checkbox</type>
</CustomField>