force-app/main/default/objects/Account/fields/KCPQ_PoNoRequired__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_PoNoRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PoNoRequired</label>
    <type>Checkbox</type>
</CustomField>