force-app/main/default/objects/Account/fields/KCPQ_Price_Library_Description__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Price_Library_Description__c</fullName>
    <label>Price Library Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>