force-app/main/default/objects/Account/fields/KCPQ_Price_Library_Type__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Price_Library_Type__c</fullName>
    <label>Price Library Type</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>