force-app/main/default/objects/Account/fields/KCPQ_Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Pricebook_Id__c</fullName>
    <label>Pricebook Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>