force-app/main/default/objects/Account/fields/KCPQ_PrintLotAttribOnInvoice__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_PrintLotAttribOnInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrintLotAttribOnInvoice</label>
    <type>Checkbox</type>
</CustomField>