force-app/main/default/objects/Account/fields/KCPQ_PrintLotAttribOnPacklist__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_PrintLotAttribOnPacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrintLotAttribOnPacklist</label>
    <type>Checkbox</type>
</CustomField>