force-app/main/default/objects/Account/fields/KCPQ_PrintPackinglistInShipping__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_PrintPackinglistInShipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrintPackinglistInShipping</label>
    <type>Checkbox</type>
</CustomField>