force-app/main/default/objects/Account/fields/KCPQ_PrintPricesOnPackinglist__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_PrintPricesOnPackinglist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrintPricesOnPackinglist</label>
    <type>Checkbox</type>
</CustomField>