force-app/main/default/objects/Account/fields/KCPQ_PromptForNonJobItem__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_PromptForNonJobItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PromptForNonJobItem</label>
    <type>Checkbox</type>
</CustomField>