force-app/main/default/objects/Account/fields/KCPQ_Rep_First_Name__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Rep_First_Name__c</fullName>
    <label>Rep First Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>