force-app/main/default/objects/Account/fields/KCPQ_Rep_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Rep_Last_Name__c</fullName>
    <label>Rep Last Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>