force-app/main/default/objects/Account/fields/KCPQ_Row_Status__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Row_Status__c</fullName>
    <label>Row Status</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>