force-app/main/default/objects/Account/fields/KCPQ_Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Sales_Group__c</fullName>
    <label>Sales Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>