force-app/main/default/objects/Account/fields/KCPQ_SalesrepId__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_SalesrepId__c</fullName>
    <label>SalesrepId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>