force-app/main/default/objects/Account/fields/KCPQ_SecurityInfo__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_SecurityInfo__c</fullName>
    <label>SecurityInfo</label>
    <length>64</length>
    <type>Text</type>
</CustomField>