force-app/main/default/objects/Account/fields/KCPQ_SendOutsideUseDocs__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_SendOutsideUseDocs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendOutsideUseDocs</label>
    <type>Checkbox</type>
</CustomField>