force-app/main/default/objects/Account/fields/KCPQ_SendOutsideUseEmail__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_SendOutsideUseEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendOutsideUseEmail</label>
    <type>Checkbox</type>
</CustomField>