force-app/main/default/objects/Account/fields/KCPQ_SendOutsideUseFax__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_SendOutsideUseFax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendOutsideUseFax</label>
    <type>Checkbox</type>
</CustomField>