force-app/main/default/objects/Account/fields/KCPQ_SendOutsideUsePrint__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_SendOutsideUsePrint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendOutsideUsePrint</label>
    <type>Checkbox</type>
</CustomField>