force-app/main/default/objects/Account/fields/KCPQ_SicCode__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_SicCode__c</fullName>
    <label>SicCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>