force-app/main/default/objects/Account/fields/KCPQ_StateExciseTaxExemptionNo__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_StateExciseTaxExemptionNo__c</fullName>
    <label>StateExciseTaxExemptionNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>