force-app/main/default/objects/Account/fields/KCPQ_StatementBalance__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_StatementBalance__c</fullName>
    <label>StatementBalance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>