force-app/main/default/objects/Account/fields/KCPQ_StatementBatchNumber__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_StatementBatchNumber__c</fullName>
    <label>StatementBatchNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>