force-app/main/default/objects/Account/fields/KCPQ_StateSalesTaxExemptionNo__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_StateSalesTaxExemptionNo__c</fullName>
    <label>StateSalesTaxExemptionNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>