force-app/main/default/objects/Account/fields/KCPQ_Summary_of_Quotes__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Summary_of_Quotes__c</fullName>
    <description>Total Value of all Quotes to date</description>
    <inlineHelpText>Total Value of all Quotes to date</inlineHelpText>
    <label>Summary of Quotes</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>