force-app/main/default/objects/Account/fields/KCPQ_Taxable__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>