force-app/main/default/objects/Account/fields/KCPQ_Territory_Description__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Territory_Description__c</fullName>
    <label>Territory Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>