force-app/main/default/objects/Account/fields/KCPQ_Total_Value_of_Quotes__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Total_Value_of_Quotes__c</fullName>
    <description>Total Value of all Quotes to date by Customer</description>
    <inlineHelpText>Total Value of all Quotes to date by Customer</inlineHelpText>
    <label>Total Value of Quotes</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>