force-app/main/default/objects/Account/fields/KCPQ_TradingPartnerName__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_TradingPartnerName__c</fullName>
    <label>TradingPartnerName</label>
    <length>64</length>
    <type>Text</type>
</CustomField>