force-app/main/default/objects/Account/fields/KCPQ_UnderTolerancePercentage__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_UnderTolerancePercentage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UnderTolerancePercentage</label>
    <type>Checkbox</type>
</CustomField>