force-app/main/default/objects/Account/fields/KCPQ_UpsHandlingCharge__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_UpsHandlingCharge__c</fullName>
    <label>UpsHandlingCharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>