force-app/main/default/objects/Account/fields/KCPQ_UseAllContracts__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_UseAllContracts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UseAllContracts</label>
    <type>Checkbox</type>
</CustomField>