force-app/main/default/objects/Account/fields/KCPQ_UseSystemUPSHandlingCharge__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_UseSystemUPSHandlingCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UseSystemUPSHandlingCharge</label>
    <type>Checkbox</type>
</CustomField>