force-app/main/default/objects/Account/fields/KCPQ_WebEnabledFlag__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_WebEnabledFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WebEnabledFlag</label>
    <type>Checkbox</type>
</CustomField>