force-app/main/default/objects/Account/fields/KCPQ_YTD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_YTD_Revenue__c</fullName>
    <label>YTD Revenue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>