force-app/main/default/objects/Account/fields/KCPQ_Zone_Pricing__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Zone_Pricing__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zone 1</fullName>
            </value>
            <value>
                <fullName>Zone 2</fullName>
            </value>
            <value>
                <fullName>Zone 1 NS</fullName>
            </value>
            <value>
                <fullName>Zone 2 NS</fullName>
            </value>
            <value>
                <fullName>Zone 3</fullName>
            </value>
            <value>
                <fullName>Zone 4</fullName>
            </value>
            <value>
                <fullName>Zone 4 NS</fullName>
            </value>
            <value>
                <fullName>Zone 12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>