force-app/main/default/objects/Account/fields/Marketing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tier__c</fullName>
    <label>Marketing Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>