force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <filterScope>Everything</filterScope>
    <label>All Manufacturers</label>
</ListView>