force-app/main/default/objects/Account/listViews/Customers.listView-meta.xml
<ListView>
    <fullName>Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>KCPQ_CompanyId__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>KCPQ_Pricebook_Id__c</columns>
    <columns>KCPQ_Zone_Pricing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KCPQ_Channel__c</field>
        <operation>equals</operation>
        <value>HOSPITALITY</value>
    </filters>
    <label>All Customers</label>
</ListView>